--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <script type="text/javascript" src="./dist/bind-model.js"></script>
     <script type="text/javascript">
-    new ModelOverrider({ level0: { level1: { level2: { value: '' } } } })
+    new ModelOverrider({ level0: { level1: { level2: { value: 'N/A' } } } })
         .bind('level0.level1.level2.value', document.getElementsByClassName('text')[0], 'dir-model')
         .bind('level0.level1.level2.value', document.getElementById('model'), 'dir-text', val => val)
         .bind('level0.level1.level2.value', document.getElementById('text'), 'dir-text', (val, _, prop) => `属性${prop}的值是${val}`)
